--- a/recovery/root/init.recovery.qcom.rc
+++ b/recovery/root/init.recovery.qcom.rc
@@ -92,6 +92,12 @@ service keymaster-3-0 /sbin/android.hardware.keymaster@3.0-service-qti
     disabled
     seclabel u:r:recovery:s0
 
+service keymaster-4-0 /sbin/android.hardware.keymaster@4.0-service-qti
+    user root
+    group root
+    disabled
+    seclabel u:r:recovery:s0
+
 on boot
     setprop sys.usb.config adb
 
