Updating service and setting Keymaster 4 to decrypt

--- a/recovery/root/init.recovery.qcom.rc
+++ b/recovery/root/init.recovery.qcom.rc
@@ -110,7 +110,7 @@ on boot
 on property:crypto.ready=0
     stop sbinqseecomd
     stop keymaster-3-0
-    #stop keymaster-4-0
+    stop keymaster-4-0
     stop gatekeeper-1-0
     stop servicemanager
 
@@ -119,6 +119,6 @@ on property:crypto.ready=1
 
 on property:vendor.sys.listeners.registered=true
     start keymaster-3-0
-    #start keymaster-4-0
+    start keymaster-4-0
     start gatekeeper-1-0
     start servicemanager
