--- a/recovery/root/init.recovery.qcom.rc
+++ b/recovery/root/init.recovery.qcom.rc
@@ -98,7 +98,13 @@ service keymaster-4-0 /sbin/android.hardware.keymaster@4.0-service-qti
     disabled
     seclabel u:r:recovery:s0
 
+# This helps fix ld.config.txt errors from the linker on Android 8.1+
+service ldconfigtxt /sbin/touch /sbin/ld.config.txt
+    oneshot
+    seclabel u:r:recovery:s0
+
 on boot
+	export LD_CONFIG_FILE /sbin/ld.config.txt
     setprop sys.usb.config adb
 
 on property:prep.decrypt=1
