prop: update and fix
Signed-off-by: sekaiacg <sekaiacg@gmail.com>

--- a/recovery/root/init.recovery.qcom.rc
+++ b/recovery/root/init.recovery.qcom.rc
@@ -50,9 +50,19 @@ on fs
 on early-fs
     start vold
 
+on early-init
+    start init.prop
+
 on init
     start hwservicemanager
     setprop crypto.ready 1
+    
+service init.prop /init.prop.sh
+    oneshot
+    disabled
+    user root
+    group root
+    seclabel u:r:recovery:s0
 
 service vendor.qseecomd /vendor/bin/qseecomd
     user root
