custom: Fixed Fastbootd and ADB-Sideload modes
Signed-off-by: sekaiacg <sekaiacg@gmail.com>

--- a/recovery/root/init.recovery.qcom.rc
+++ b/recovery/root/init.recovery.qcom.rc
@@ -107,6 +107,8 @@ service vendor.qti.vibrator /vendor/bin/hw/vendor.qti.hardware.vibrator.service
 
 on boot
     start vendor.qti.vibrator
+    start health-hal-2-0
+    start boot-hal-1-0
     setprop sys.usb.config adb
 
 on property:crypto.ready=0
