init: Update sched_lib_name and sched_lib_mask_force
Signed-off-by: sekaiacg <sekaiacg@gmail.com>

--- a/recovery/root/init.recovery.qcom.rc
+++ b/recovery/root/init.recovery.qcom.rc
@@ -48,6 +48,8 @@ on fs
     install_keyring
 
 on early-fs
+    write /proc/sys/kernel/sched_lib_name "recovery,Updater,updater"
+    write /proc/sys/kernel/sched_lib_mask_force 255
     start vold
 
 on init
