--- a/recovery/root/init.recovery.qcom.rc
+++ b/recovery/root/init.recovery.qcom.rc
@@ -26,7 +26,7 @@
 #
 
 on early-fs
-    write /proc/sys/kernel/sched_lib_name "recovery,Updater,updater"
+    write /proc/sys/kernel/sched_lib_name "recovery,magiskboot,Updater,updater"
     write /proc/sys/kernel/sched_lib_mask_force 255
 
 on fs
